/*
 * Copyright 2019 Red Hat, Inc. and/or its affiliates.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

import { shallow } from 'enzyme';
import toJson from 'enzyme-to-json';
import * as React from 'react';
import { DemoDropdown, Props } from './DemoDropdown';

describe('Demo dropdown button', () => {
  it('should render correctly with a couple of demos', () => {
    const props: Props = {
      demos: ['demo 1', 'demo 2'],
      onSelect: jest.fn(),
    };
    const dropdown = shallow(<DemoDropdown {...props} />);
    expect(toJson(dropdown)).toMatchSnapshot();
  });

  it('should be disabled with empty demos', () => {
    const props: Props = {
      demos: [],
      onSelect: jest.fn(),
    };
    const dropdown = shallow(<DemoDropdown {...props} />);
    expect(toJson(dropdown)).toMatchSnapshot();
  });
});
